fix: adjust modal mobile and hide overflow x

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -750,6 +750,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: auto 15px;
     transform: translateY(50px);
     transition: transform 0.3s;
 
